# khatt

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  PLAN.md  README.md  ROADMAP.md  app.py  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml  release.yml  release.yml.disabled
khatt/: __init__.py  cli.py  mapper.py  raster.py  shaping.py
khatt/fonts/: __init__.py
tests/: conftest.py  test_api.py  test_cli.py  test_edge_cases.py  test_fonts.py  test_golden.py  test_mapper.py  test_raster.py  test_shaping.py
tests/golden/: alqahira_ascii_amiri.txt  alqahira_blocks_amiri.txt  alqahira_braille_amiri.txt  khatt_ascii_amiri.txt  khatt_blocks_amiri.txt  khatt_braille_amiri.txt  marhaba_ascii_amiri.txt  marhaba_blocks_amiri.txt  marhaba_braille_amiri.txt
