[project]
name = "khatt"
version = "0.1.0"
description = "Render Arabic text as ASCII/Unicode-block art — the Arabic FIGlet"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Mohammed Essam", email = "mohammedessam613@gmail.com" }]
requires-python = ">=3.10"
keywords = [
    "arabic",
    "ascii-art",
    "figlet",
    "rtl",
    "harfbuzz",
    "text-art",
    "unicode",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Arabic",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Artistic Software",
    "Topic :: Text Processing :: Fonts",
]
dependencies = [
    "python-bidi>=0.6.11",
    "uharfbuzz>=0.55.0",
]

[project.urls]
Homepage = "https://github.com/mohammedessam/khatt"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["khatt"]

[dependency-groups]
dev = [
    "mypy>=2.2.0",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.21",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
# Arabic text appears throughout this codebase by design; the "ambiguous
# unicode character" rules would flag every Arabic string literal.
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
disallow_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=khatt --cov-report=term-missing --cov-fail-under=85"
